# Fuquiem

./: .gitignore  .replit  README.md  keep_alive.py  main.py  pyproject.toml  replit_update.py  requirements.txt  utils.py
cogs/: db.py  econ.py  milcheck.py  nationcommands.py  raffle.py  raids.py  replit_update.py  sheet.py  update.py
data/templates/: buildspage.txt  damage.txt  raidspage.txt  sheet.txt
